sort.pancake.lessons.sort.pancake.BasicPancake.scala.code
def solve() {
  
  for(i<0 to getTaillePile()-2)
  {
    var max=getRayonCrepe(i)
    var ind=i
    for(j-> 1 to getTaillePile()-i)
    {
      if(max<getRayonCrepe(i))
      {
        ind=i
        max=getRayonCrepe(i)
      }
    }
    retourne(ind)
    retourne(getTaillePile()-1)
    
  }
  
}